# ONNX-for-QNX-7.1

./: .gitignore  CMakeLists.txt  README.md  run.sh
docker/: ubuntu.Dockerfile
src/: inference.cpp
